# verified-logs

./: README.md
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs  mpt.rs
script/: Cargo.toml  build.rs
script/src/: main.rs  util.rs
