[workspace]
[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"

[dependencies]
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
url = "2.5.0"
ethers-core = "2.0.13"
ethers-providers = "2.0.13"
tokio = { version = "1.36.0", features = ["full"] }
alloy-providers = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
reth-primitives = { git = "https://github.com/sp1-patches/reth", default-features = false, branch = "sp1-reth" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }